# robot_dog_description

./: CMakeLists.txt  README.md  package.xml
config/: collision_only.rviz  dog_ros2_control.yaml  joint_names_new_assembly_URDF.yaml
launch/: cmd_vel_to_command.launch.py  collision_view.launch.py  display.launch.py  gazebo.launch.py
meshes/: base_link.STL  lf1_Link.STL  lf2_Link.STL  lw1_Link.STL  lw2_Link.STL  rf1_Link.STL  rf2_Link.STL  rw1_Link.STL  rw2_Link.STL
scripts/: base_mover.py  gait_patterns.py  gait_trajectory.py
urdf/: Assem_urdf.gv  new_assembly_URDF.csv  new_assembly_URDF.urdf
worlds/: empty.sdf  flat_ground.world
