<?xml version="1.0"?>
<package format="3">
  <name>robot_dog_description</name>
  <version>0.0.1</version>
  <description>URDF and gait nodes for a simple quadruped robot</description>

  <maintainer email="sourav@purdue.edu">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Messages -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export/>
</package>
